--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
     "@nuxt/icon": "1.10.3",
     "@pinia/nuxt": "0.9.0",
     "@tailwindcss/vite": "^4.0.0",
+    "@vueuse/nuxt": "12.5.0",
     "nuxt": "^3.15.2",
     "pinia": "^2.3.0",
     "socket.io-client": "^4.8.1",
