--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,62 +1,50 @@
-name: Deploy to VPS
+name: 🚀 Deploy
 
 on:
   push:
-    branches:
-      - master
+    branches: ['master']
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
+      - name: Setup Node
+        uses: actions/setup-node@v4
         with:
           node-version: '22'
 
       - name: Cache pnpm dependencies
-        uses: actions/cache@v2
+        uses: actions/cache@v4
         with:
           path: ~/.pnpm-store
           key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
             ${{ runner.os }}-pnpm-
 
-      - name: Install dependencies with pnpm
+      - name: Install dependencies
         run: |
           npm install -g pnpm
           pnpm install
 
-      - name: Build the app
+      - name: Build API
         run: |
-          pnpm build
+          pnpm turbo run build --filter=api --scope=apps/api
 
-      - name: Set up SSH key
-        uses: webfactory/ssh-agent@v0.5.3
-        with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+      - name: Build Web (Nuxt 3)
+        run: |
+          pnpm turbo run generate --filter=web --scope=apps/web
 
       - name: Deploy to VPS
-        run: |
-          ssh -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_IP }} << 'EOF'
-            npm install -g pnpm
-            npm install -g pm2
-
-            cd /var/www/uno-online
-            git pull origin master
-            pnpm install
-            pnpm build
-
-            if ! pm2 list | grep -q "uno-online"; then
-              pnpm start --name uno-online
-            else
-              pm2 restart uno-online
-            fi
-          EOF
-
-      - name: Check app status
-        run: |
-          curl -f ${{ secrets.VPS_IP }}
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.VPS_HOST }}
+          port: ${{ secrets.VPS_PORT }}
+          username: ${{ secrets.VPS_USERNAME }}
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
+            cd /var/www/uno-online &&
+            pm2 restart uno-api || pm2 start /var/www/uno-online/apps/api/dist/main.js --name uno-api
+            npx serve -s /var/www/uno-online/apps/web/.output/public --port 3001 --name uno-web
