--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nuxt/icon": "1.10.3",
+    "@nuxtjs/i18n": "9.1.4",
     "@pinia/nuxt": "0.9.0",
     "@tailwindcss/vite": "^4.0.0",
     "@vueuse/core": "^12.5.0",
